--- a/src/main/resources/load.properties
+++ b/src/main/resources/load.properties
@@ -1,16 +1,16 @@
 # mysql
 jdbc.driverClassName=com.mysql.jdbc.Driver
 # jdbc_develop
-jdbc.url_dev=jdbc:mysql://119.23.46.71:3306/myblog?useUnicode=true&characterEncoding=UTF-8
-jdbc.host_dev=119.23.46.71
+jdbc.url_dev=jdbc:mysql://127.0.0.1:3306/myblog?useUnicode=true&characterEncoding=UTF-8
+jdbc.host_dev=127.0.0.1
 jdbc.username_dev=root
-jdbc.password_dev=helloroot
+jdbc.password_dev=Q2er.1w3654
 jdbc.database_dev=myblog
 #jdbc_product
 jdbc.url_pro=jdbc:mysql://127.0.0.1:3306/myblog?useUnicode=true&characterEncoding=UTF-8
 jdbc.host_pro=127.0.0.1
 jdbc.username_pro=root
-jdbc.password_pro=helloroot
+jdbc.password_pro=Q2er.1w3654
 jdbc.database_pro=myblog
 #server
 #database for backup,remember to update or change
@@ -20,8 +20,9 @@ server.username=wenzhihuai
 server.password=wenzhihuai
 jdbc.database=myblog
 # redis
-redis.url=redis://119.23.46.71:6340
-host=119.23.46.71
+#redis.url=redis://119.23.46.71:6340
+redis.url=
+host=
 port=6340
 password=root
 timeout=5000
