--- a/pom.xml
+++ b/pom.xml
@@ -985,6 +985,11 @@
             <artifactId>log4j-over-slf4j</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.1.0-M1</version>
+        </dependency>
 
     </dependencies>
     <build>
